--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 <!-- Item two -->
                 <div>
                    
-                    <li class="w3-padding-20"> <h4>Bachelor's Degree for music in the university of Edinburgh.</h4></li>
+                    <li class="w3-padding-20"> <h4>Bachelor's Degree for Music Technology in the Royal Birmingham Conservatoire.</h4></li>
                 </div>
         
                 <hr>
